--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Pneumonia</title>
+    <title>DemHC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}" />
-  </head>
+</head>
 
- 
-  <body>
+
+<body>
     {% block content %}{% endblock %}
-  </body>
+</body>
 
-  <footer>
+<footer>
     <script src="{{ url_for('static',filename='main.js') }}"></script>
-  </footer>
+</footer>
+
 </html>
