--- a/proj/templates/login.html
+++ b/proj/templates/login.html
@@ -88,37 +88,18 @@
 
                     <h3 id="form-title">LOGIN</h3>
                 </div>
-                {% if message %}
-                <div class="container">
-                    {{ message }}
-                </div>
-                {% endif %}
-                <div class="d-flex justify-content-center form_container">
-                    <form method="POST" action="{% url 'login' %}">
-                        {% csrf_token %}
-                        <div class="input-group mb-3">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fas fa-user"></i></span>
-                            </div>
-                            <input type="text" name="username" placeholder="Username..." class="form-control">
-                        </div>
-                        <div class="input-group mb-2">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="fas fa-key"></i></span>
-                            </div>
-                            <input type="password" name="password" placeholder="Password..." class="form-control">
-                        </div>
 
-                        <div class="d-flex justify-content-center mt-3 login_container">
-                            <input class="btn login_btn" type="submit" value="Login">
-                        </div>
+                <div class="d-flex justify-content-center form_container">
+                    <form method="POST" action="">
+                        {{ form.hidden_tag() }} {{ form.username }} {{ form.password }} {{ form.submit }}
+
                     </form>
 
                 </div>
 
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                        Don't have an account? <a href="{{ url_for('signup') }}" class="ml-2">Sign Up</a>
                     </div>
 
                 </div>
