--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -1,33 +1,81 @@
 {% extends "base.html" %} {% block content %}
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+        <!-- Toggle button -->
+        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
+
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Navbar brand -->
+
+            <!-- Left links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Articles</a>
+                </li>
+            </ul>
+            <!-- Left links -->
+        </div>
+        <!-- Collapsible wrapper -->
+
+        <!-- Right elements -->
+        <div class="d-flex align-items-center">
+            <a href="{{ url_for('logout') }}">Logout</a>
+            <!-- Right elements -->
+            </a>
+        </div>
+        <!-- Container wrapper -->
+</nav>
+<!-- Navbar -->
+<div class="bg-image" style="
+      background-image:url('static/X.jpg');
+      height: 100%;
+      width: 100%;
+      
+      object-fit: cover;
+      color: white;
+    ">
 
 
-<div class="main">
-    <div class="title">
-        <h3>DemHC</h3>
-        <!-- <p>
+    <div class="main" style="padding: 134px;">
+        <div class="title">
+            <h3>DemHC</h3>
+            <!-- <p>
       <small>A web app demo</small>
     </p> -->
-    </div>
+        </div>
 
-    <div class="panel">
-        <input id="file-upload" class="hidden" type="file" accept="image/x-png,image/gif,image/jpeg" />
-        <label for="file-upload" id="file-drag" class="upload-box">
+        <div class="panel">
+            <input id="file-upload" class="hidden" type="file" accept="image/x-png,image/gif,image/jpeg" />
+            <label for="file-upload" id="file-drag" class="upload-box">
       <div id="upload-caption">Drop image here or click to select</div>
       <img id="image-preview" class="hidden" />
     </label>
-    </div>
-    <div style="margin-bottom: 2rem;">
-        <input type="button" value="Submit" class="button" onclick="submitImage();" />
-        <input type="button" value="Clear" class="button" onclick="clearImage();" />
-    </div>
+        </div>
+        <div style="margin-bottom: 2rem;">
+            <input type="button" value="Submit" class="button" onclick="submitImage();" />
+            <input type="button" value="Clear" class="button" onclick="clearImage();" />
+        </div>
 
-    <div id="image-box">
-        <img id="image-display" />
-        <div id="pred-result" class="hidden"></div>
-        <svg id="loader" class="hidden" viewBox="0 0 32 32" width="32" height="32">
+        <div id="image-box">
+            <img id="image-display" />
+            <div id="pred-result" class="hidden"></div>
+            <svg id="loader" class="hidden" viewBox="0 0 32 32" width="32" height="32">
       <circle id="spinner" cx="16" cy="16" r="14" fill="none"></circle>
     </svg>
+        </div>
     </div>
+
 </div>
 
 {% endblock %}
