--- a/proj/templates/base.html
+++ b/proj/templates/base.html
@@ -20,6 +20,41 @@
 
 <footer>
     <script src="{{ url_for('static',filename='main.js') }}"></script>
+    <!-- Footer Elements -->
+    <div class="container">
+
+        <!--Grid row-->
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-6 mb-4">
+
+                <!-- Form -->
+
+                <!-- Form -->
+
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-md-6 mb-4">
+
+
+
+            </div>
+            <!--Grid column-->
+
+        </div>
+        <!--Grid row-->
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2021 Copyright:
+        <a href="https://mdbootstrap.com/"> DemHC</a>
+    </div>
+    <!-- Copyright -->
 </footer>
 
 </html>
