--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Articles</a>
+                    <a class="nav-link" href="{{ url_for('article') }}">Articles</a>
                 </li>
             </ul>
             <!-- Left links -->
