--- a/proj/templates/about.html
+++ b/proj/templates/about.html
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('static/ab.jpg')">
+    <header class="masthead" style="background-image: url('static/ab.jpg'); height: 45vh;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
