--- a/proj/templates/article.html
+++ b/proj/templates/article.html
@@ -22,7 +22,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">DemHC</a>
+            <a class="navbar-brand text-white" href="{{ url_for('index') }}">DemHC</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -30,14 +30,14 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="">Article</a>
+                        <a class="nav-link text-white" href="">Article</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('add') }}">Add</a>
+                        <a class="nav-link text-white" href="{{ url_for('add') }}">Add</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">logout</a>
+                        <a class="nav-link text-white" href="{{ url_for('logout') }}">logout</a>
                     </li>
 
                 </ul>
@@ -46,13 +46,13 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('static/m.jpg')">
+    <header class="masthead" style="background-image: url('static/m.jpg'); height: 45vh;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
-                    <div class="site-heading">
+                    <div class="site-heading text-white">
                         <h1>Artciles</h1>
-                        <span class="subheading">Summaries</span>
+                        <span class="subheading text-white">Summaries</span>
                     </div>
                 </div>
             </div>
