--- a/proj/templates/index.html
+++ b/proj/templates/index.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="{{ url_for('about') }}">About us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('article') }}">Articles</a>
