--- a/proj/templates/about.html
+++ b/proj/templates/about.html
@@ -28,13 +28,13 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="">About</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="{{ url_for('article') }}">Article</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('add') }}">Add</a>
                     </li>
                     <li class="nav-item">
@@ -47,13 +47,13 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('static/ab.jpg'); height: 45vh;">
+    <header class="masthead" style="background-image: url('static/logo.png'); height: 45vh;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="page-heading">
-                        <h1>About Me</h1>
-                        <span class="subheading">This is what I do.</span>
+                        <h1>About Us</h1>
+                        <span class="subheading"></span>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
-                    <p class="copyright text-muted">Copyright &copy; DemHC</p>
+                    <p class="copyright text-muted">Copyright &copy;2021 DemHC</p>
                 </div>
             </div>
         </div>
