--- a/proj/templates/about.html
+++ b/proj/templates/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About us</title>
+    <title>DemHC</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -64,9 +64,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <p>DemHC is a platform that aims to automate the role of radiologists in diagnosing diseases precisely with high accuracy but without the errors and drawbacks of a human radiologist. It acts as a platform that will assist a human radiologist.</p>
+                <p>DemHC's Chest X-Ray Solution automatically analyzes all adult chest x-rays, identifying signs of abnormalities(pneumothorax and pneumoperitoneum etc) and flags them.</p>
+                <p>Our crowd sourced blogs/articles aims to make knowledges more accessible and free.</p>
+                <p>AI has always been a hot topic that has only gotten hotter with time.Artificial intelligence (AI) is the ability of a computer or a robot controlled by a computer to do tasks that are usually done by humans because they require human intelligence
+                    and discernment.</p>
+                <p>
+                    AI technology from traditional technologies in health care is the ability to gather data, process it and give a well-defined output to the end-user. AI does this through machine learning algorithms and deep learning techniques. These algorithms can recognize
+                    patterns in behavior and create their own logic
+                </p>
             </div>
         </div>
     </div>
